--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "MapasCulturais",
+  "name": "AgendaCE",
   "version": "1.0.3",
-  "description": "Mapas Culturais app",
+  "description": "Agenda Cultural do Ceara",
   "devDependencies": {
     "cordova-plugin-firebase": "^0.1.25",
     "gulp": "^3.5.6",
